--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-server.servlet.context-path=/photoblog
 server.servlet.session.timeout=30m
 server.servlet.session.cookie.http-only=true
 server.servlet.session.tracking-modes=cookie
@@ -14,3 +13,4 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.apache.derby.iapi.jdbc.AutoloadedDriver
+server.tomcat.additional-tld-skip-patterns=*derby*.jar
