--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,9 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=40MB
 spring.servlet.multipart.location=${java.io.tmpdir}
-spring.datasource.url=jdbc:derby:memory;create=true
+spring.datasource.url=jdbc:h2:~/photoblog
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DerbyDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=org.apache.derby.iapi.jdbc.AutoloadedDriver
-server.tomcat.additional-tld-skip-patterns=*derby*.jar
+spring.datasource.driver-class-name=org.h2.Driver
