--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=40MB
 spring.servlet.multipart.location=${java.io.tmpdir}
-spring.datasource.url=jdbc:h2:~/photoblog
+spring.datasource.url=jdbc:h2:~/photoblog;auto_server=true
+spring.datasource.username=sa
+spring.datasource.password=sa
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
