--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,14 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=40MB
 spring.servlet.multipart.location=${java.io.tmpdir}
-spring.datasource.url=jdbc:h2:./photoblog;auto_server=true
+spring.datasource.url=jdbc:h2:./photoblog;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.open-in-view=false
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=org.h2.Driver
 spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
